examples/test/testpolicy9012.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9012
  namespace: namespace214
spec:
  podSelector:
    matchLabels:
      key49: value29
      key19: value22
      key2: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value24
      podSelector:
        matchLabels:
          key48: value42
